# natural-images-cnn-transfer-learning

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
history/: history_cnn.pkl  history_mob.pkl  history_mob_tuned.pkl  history_vgg.pkl
notebooks/: natural_images_cnn_transfer_learning.ipynb
