[project]
name = "natural-images-cnn-transfer-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "ete9nal",email = "ete9nal@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "tensorflow (>=2.21.0,<3.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
